Implement JWT configuration and Audit Logging.

--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -19,4 +19,5 @@ client.url=${CLIENT_URL}
 aws.sqs.queue.audit.url=${AUDIT_SQS_URL}
 audit.activity.type.prefix=Workflow-
 
+admin.api.url =${ADMIN_URL}
 notification.api.url= ${NOTIFICATION_URL}
