--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.driver-class-name=com.amazonaws.secretsmanager.sql.AWSSecretsManagerMySQLDriver
 spring.datasource.url=jdbc-secretsmanager:mysql://edgp-sit.cfqm8kgg2pur.ap-southeast-1.rds.amazonaws.com:3306/masterdata
-spring.datasource.username=rds-credentials-edgp-sit
+spring.datasource.username=test/edgp/secret
 
-spring.config.import=aws-secretsmanager:sit/edgp/secret
+spring.config.import=aws-secretsmanager:test/edgp/secret2
 
 
 spring.cloud.aws.region.static=ap-southeast-1
@@ -20,4 +20,5 @@ client.url=${CLIENT_URL}
 aws.sqs.queue.audit.url=${AUDIT_SQS_URL}
 audit.activity.type.prefix=Workflow-
 
+admin.api.url =${ADMIN_URL}
 notification.api.url= ${NOTIFICATION_URL}
