--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -21,3 +21,4 @@ aws.sqs.queue.audit.url=https://sqs.ap-southeast-1.amazonaws.com/audit-sqs
 audit.activity.type.prefix=Workflow-
 
 notification.api.url= https://localhost:8087
+admin.api.url =http://localhost:8081
