read rule response from sqs

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
 		</dependency>
 
 		<!-- Amazon SQS -->
+		
+	<dependency>
+			<groupId>io.awspring.cloud</groupId>
+			<artifactId>spring-cloud-aws-starter-sqs</artifactId>
+			<version>3.1.1</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>software.amazon.awssdk</groupId>
 			<artifactId>sqs</artifactId>
