--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -8,8 +8,6 @@ spring.cloud.aws.region.static=ap-southeast-1
 spring.cloud.aws.credentials.access-key=${aws_access_key_id}
 spring.cloud.aws.credentials.secret-key=${aws_secret_key_id}
 
-jwt.public.key=${jwt_public_key}
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.port=8084
@@ -17,6 +15,7 @@ server.port=8084
 client.url=${CLIENT_URL}
 
 aws.sqs.queue.audit.url=${AUDIT_SQS_URL}
+aws.sqs.queue.rule.response.url=${RULE_RESPONSE_SQS_URL}
 audit.activity.type.prefix=Workflow-
 
 admin.api.url =${ADMIN_URL}
