--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,7 @@ server.port=8084
 client.url=${CLIENT_URL}
 
 aws.sqs.queue.audit.url=${AUDIT_SQS_URL}
+aws.sqs.queue.rule.response.url=${RULE_RESPONSE_SQS_URL}
 audit.activity.type.prefix=Workflow-
 
 admin.api.url =${ADMIN_URL}
