--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,13 @@
 			<artifactId>aws-secretsmanager-jdbc</artifactId>
 			<version>2.0.2</version>
 		</dependency>
+		
+		<!-- AWS SDK v2 - DynamoDB Core -->
+	    <dependency>
+	        <groupId>software.amazon.awssdk</groupId>
+	        <artifactId>dynamodb</artifactId>
+	        <version>2.31.54</version>
+	    </dependency>
 	
 		<dependency>
 			<groupId>org.projectlombok</groupId>
