--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,12 @@ server.port=8084
 client.url=${CLIENT_URL}
 
 aws.sqs.queue.audit.url=${AUDIT_SQS_URL}
+aws.sqs.queue.workflow.ingestion.url=${WORKFLOW_INGESTION_SQS_URL}
+aws.sqs.queue.rule.request.url=${RULE_REQUEST_SQS_URL}
 aws.sqs.queue.rule.response.url=${RULE_RESPONSE_SQS_URL}
+
+
+
 audit.activity.type.prefix=Workflow-
 
 admin.api.url =${ADMIN_URL}
