--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
-spring.datasource.driver-class-name=com.amazonaws.secretsmanager.sql.AWSSecretsManagerMySQLDriver
-spring.datasource.url=jdbc-secretsmanager:mysql://edgp-sit.cfqm8kgg2pur.ap-southeast-1.rds.amazonaws.com:3306/masterdata
-spring.datasource.username=test/edgp/secret
+#spring.datasource.driver-class-name=com.amazonaws.secretsmanager.sql.AWSSecretsManagerMySQLDriver
+#spring.datasource.url=jdbc-secretsmanager:mysql://edgp-sit.cfqm8kgg2pur.ap-southeast-1.rds.amazonaws.com:3306/masterdata
+#spring.datasource.username=test/edgp/secret
 
-spring.config.import=aws-secretsmanager:test/edgp/secret2
+spring.datasource.url=jdbc:mysql://localhost:3306/masterdata
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+spring.config.import=optional:aws-secretsmanager:test/edgp/secret2
 
 
 spring.cloud.aws.region.static=ap-southeast-1
