Implemented for update file process stage.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,5 @@ audit.activity.type.prefix=Workflow-
 
 admin.api.url =${ADMIN_URL}
 notification.api.url= ${NOTIFICATION_URL}
+
+polling.interval-ms=10000
