validate user org id and retrieve work flow list by user org id

--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -16,6 +16,7 @@ client.url=${CLIENT_URL}
 
 aws.sqs.queue.audit.url=${AUDIT_SQS_URL}
 aws.sqs.queue.rule.response.url=${RULE_RESPONSE_SQS_URL}
+org.api.url=${ORG_URL}
 audit.activity.type.prefix=Workflow-
 
 admin.api.url =${ADMIN_URL}
