--- a/src/main/resources/application-sit.properties
+++ b/src/main/resources/application-sit.properties
@@ -4,7 +4,6 @@ spring.datasource.username=rds-credentials-edgp-sit
 
 spring.config.import=aws-secretsmanager:sit/edgp/secret
 
-
 spring.cloud.aws.region.static=ap-southeast-1
 spring.cloud.aws.credentials.access-key=${aws_access_key_id}
 spring.cloud.aws.credentials.secret-key=${aws_secret_key_id}
@@ -16,8 +15,9 @@ server.port=8084
 client.url=${CLIENT_URL}
 
 aws.sqs.queue.audit.url=${AUDIT_SQS_URL}
+aws.sqs.queue.workflow.ingestion.url=${WORKFLOW_INGESTION_SQS_URL}
+aws.sqs.queue.rule.request.url=${RULE_REQUEST_SQS_URL}
 aws.sqs.queue.rule.response.url=${RULE_RESPONSE_SQS_URL}
-audit.activity.type.prefix=Workflow-
 
 admin.api.url =${ADMIN_URL}
 notification.api.url= ${NOTIFICATION_URL}
