Add custom async listener factory with (poll=1, concurrency=1, pool=5)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,7 @@ server.port=8084
 
 client.url=${CLIENT_URL}
 
+aws.sqs.listener.thread.max.pool.size=5
 
 aws.sqs.queue.audit.url=${AUDIT_SQS_URL}
 aws.sqs.queue.workflow.ingestion.url=${WORKFLOW_INGESTION_SQS_URL}
