--- a/src/main/resources/application-sit.properties
+++ b/src/main/resources/application-sit.properties
@@ -18,8 +18,8 @@ aws.sqs.listener.thread.max.pool.size=5
 
 aws.sqs.queue.audit.url=${AUDIT_SQS_URL}
 aws.sqs.queue.workflow.ingestion.url=${WORKFLOW_INGESTION_SQS_URL}
-aws.sqs.queue.rule.request.url=${RULE_REQUEST_SQS_URL}
-aws.sqs.queue.rule.response.url=${RULE_RESPONSE_SQS_URL}
+aws.sqs.queue.workflow.rule.request.url=${WORKFLOW_RULES_REQUEST_SQS_URL}
+aws.sqs.queue.workflow.rule.response.url=${WORKFLOW_RULES_RESPONSE_SQS_URL}
+
 
 admin.api.url =${ADMIN_URL}
-notification.api.url= ${NOTIFICATION_URL}
