--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,8 @@
-#spring.datasource.driver-class-name=com.amazonaws.secretsmanager.sql.AWSSecretsManagerMySQLDriver
-#spring.datasource.url=jdbc-secretsmanager:mysql://edgp-sit.cfqm8kgg2pur.ap-southeast-1.rds.amazonaws.com:3306/masterdata
-#spring.datasource.username=test/edgp/secret
+spring.datasource.driver-class-name=com.amazonaws.secretsmanager.sql.AWSSecretsManagerMySQLDriver
+spring.datasource.url=jdbc-secretsmanager:mysql://edgp-sit.cfqm8kgg2pur.ap-southeast-1.rds.amazonaws.com:3306/masterdata
+spring.datasource.username=rds-credentials-edgp-sit
 
-spring.datasource.url=jdbc:mysql://localhost:3306/masterdata
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-
-spring.config.import=optional:aws-secretsmanager:test/edgp/secret2
+spring.config.import=aws-secretsmanager:sit/edgp/secret
 
 spring.cloud.aws.region.static=ap-southeast-1
 spring.cloud.aws.credentials.access-key=${aws_access_key_id}
@@ -26,11 +20,10 @@ aws.sqs.listener.thread.max.pool.size=5
 
 aws.sqs.queue.audit.url=${AUDIT_SQS_URL}
 aws.sqs.queue.workflow.ingestion.url=${WORKFLOW_INGESTION_SQS_URL}
-aws.sqs.queue.rule.request.url=${RULE_REQUEST_SQS_URL}
-aws.sqs.queue.rule.response.url=${RULE_RESPONSE_SQS_URL}
+aws.sqs.queue.workflow.rule.request.url=${WORKFLOW_RULES_REQUEST_SQS_URL}
+aws.sqs.queue.workflow.rule.response.url=${WORKFLOW_RULES_RESPONSE_SQS_URL}
 
 
 audit.activity.type.prefix=Workflow-
 
 admin.api.url =${ADMIN_URL}
-notification.api.url= ${NOTIFICATION_URL}
