Add dynamic table exists or not checking for observer.

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -16,6 +16,7 @@ spring.cloud.aws.credentials.secret-key=456
 jwt.public.key=654321
 
 client.url==http://localhost:8080
+organization.api.url= http://localhost:8082
 
 aws.sqs.queue.audit.url=https://sqs.ap-southeast-1.amazonaws.com/audit-sqs
 audit.activity.type.prefix=Workflow-
