Modified property file to fix the unit test.

--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -2,7 +2,7 @@ spring.datasource.driver-class-name=com.amazonaws.secretsmanager.sql.AWSSecretsM
 spring.datasource.url=jdbc-secretsmanager:mysql://edgp-sit.cfqm8kgg2pur.ap-southeast-1.rds.amazonaws.com:3306/masterdata
 spring.datasource.username=rds-credentials-edgp-sit
 
-spring.config.import=aws-secretsmanager:prod/edgp/secret
+spring.config.import=optional:aws-secretsmanager:prod/edgp/secret
 
 spring.cloud.aws.region.static=ap-southeast-1
 spring.cloud.aws.credentials.access-key=${aws_access_key_id}
