--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -19,6 +19,10 @@ client.url==http://localhost:8080
 organization.api.url= http://localhost:8082
 
 aws.sqs.queue.audit.url=https://sqs.ap-southeast-1.amazonaws.com/audit-sqs
+aws.sqs.queue.workflow.ingestion.url=https://sqs.ap-southeast-1.amazonaws.com/ingestion
+aws.sqs.queue.workflow.rule.request.url=https://sqs.ap-southeast-1.amazonaws.com/rule-request
+aws.sqs.queue.workflow.rule.response.url=https://sqs.ap-southeast-1.amazonaws.com/rule-response
+
 audit.activity.type.prefix=Workflow-
 
 admin.api.url =http://localhost:8081
