update dynamo db table name in properties file

--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -23,6 +23,9 @@ aws.sqs.queue.audit.url=${AUDIT_SQS_URL}
 aws.sqs.queue.workflow.ingestion.url=${WORKFLOW_INGESTION_SQS_URL}
 aws.sqs.queue.workflow.rule.request.url=${WORKFLOW_RULES_REQUEST_SQS_URL}
 aws.sqs.queue.workflow.rule.response.url=${WORKFLOW_RULES_RESPONSE_SQS_URL}
+aws.dynamodb.table.master.data.header=MasterDataHeader
+aws.dynamodb.table.master.data.task=MasterDataTaskTracker
+
 
 
 admin.api.url =${ADMIN_URL}
