Implement for email notification regarding the ingestion result.

--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -16,7 +16,7 @@ server.port=8084
 
 client.url=${CLIENT_URL}
 organization.api.url= ${ORGANIZATION_URL}
-
+notification.api.url= ${NOTIFICATION_URL}
 aws.sqs.listener.thread.max.pool.size=5
 
 aws.sqs.queue.audit.url=${AUDIT_SQS_URL}
