--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,12 @@ spring.datasource.driver-class-name=com.amazonaws.secretsmanager.sql.AWSSecretsM
 spring.datasource.url=jdbc-secretsmanager:mysql://edgp-sit.cfqm8kgg2pur.ap-southeast-1.rds.amazonaws.com:3306/masterdata
 spring.datasource.username=rds-credentials-edgp-sit
 
+#spring.datasource.url=jdbc:mysql://localhost:3306/masterdata
+#spring.datasource.username=${DB_USERNAME}
+#spring.datasource.password=${DB_PASSWORD}
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
 spring.config.import=optional:aws-secretsmanager:sit/edgp/secret
 
 spring.cloud.aws.region.static=ap-southeast-1
@@ -16,7 +22,7 @@ server.port=8084
 
 client.url=${CLIENT_URL}
 organization.api.url= ${ORGANIZATION_URL}
-
+notification.api.url= ${NOTIFICATION_URL}
 aws.sqs.listener.thread.max.pool.size=5
 
 aws.sqs.queue.audit.url=${AUDIT_SQS_URL}
