--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -17,6 +17,7 @@ jwt.public.key=654321
 
 client.url==http://localhost:8080
 organization.api.url= http://localhost:8082
+notification.api.url= http://localhost:8083
 
 aws.sqs.queue.audit.url=https://sqs.ap-southeast-1.amazonaws.com/audit-sqs
 aws.sqs.queue.workflow.ingestion.url=https://sqs.ap-southeast-1.amazonaws.com/ingestion
