--- a/pom.xml
+++ b/pom.xml
@@ -1,35 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.5.4</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>sg.edu.nus.iss</groupId>
 	<artifactId>edgp-workflow-management</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>edgp-workflow-management</name>
 	<description>EDGP Workflow Management Project</description>
-	<url/>
+	<url />
 	<licenses>
-		<license/>
+		<license />
 	</licenses>
 	<developers>
-		<developer/>
+		<developer />
 	</developers>
 	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
+		<connection />
+		<developerConnection />
+		<tag />
+		<url />
 	</scm>
 	<properties>
 		<java.version>17</java.version>
-                 <sonar.organization>ralphlui-enterprise-data-governance-platform</sonar.organization>
-                <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.organization>ralphlui-enterprise-data-governance-platform</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -69,27 +70,27 @@
 		</dependency>
 
 		<!-- Amazon SQS -->
-		
-	    <dependency>
+
+		<dependency>
 			<groupId>io.awspring.cloud</groupId>
 			<artifactId>spring-cloud-aws-starter-sqs</artifactId>
 			<version>3.1.1</version>
 		</dependency>
-		
+
 		<!-- AWS Support -->
 		<dependency>
 			<groupId>com.amazonaws.secretsmanager</groupId>
 			<artifactId>aws-secretsmanager-jdbc</artifactId>
 			<version>2.0.2</version>
 		</dependency>
-		
+
 		<!-- AWS SDK v2 - DynamoDB Core -->
-	    <dependency>
-	        <groupId>software.amazon.awssdk</groupId>
-	        <artifactId>dynamodb</artifactId>
-	        <version>2.31.54</version>
-	    </dependency>
-	
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>dynamodb</artifactId>
+			<version>2.31.54</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -134,6 +135,12 @@
 			<artifactId>httpclient</artifactId>
 			<version>4.5.13</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpmime</artifactId>
+			<version>4.5.13</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
