--- a/src/main/resources/application-sit.properties
+++ b/src/main/resources/application-sit.properties
@@ -16,6 +16,7 @@ server.port=8084
 
 client.url=${CLIENT_URL}
 organization.api.url= ${ORGANIZATION_URL}
+notification.api.url= ${NOTIFICATION_URL}
 
 aws.sqs.listener.thread.max.pool.size=5
 
