--- a/src/main/resources/application-sit.properties
+++ b/src/main/resources/application-sit.properties
@@ -24,6 +24,8 @@ aws.sqs.queue.audit.url=${AUDIT_SQS_URL}
 aws.sqs.queue.workflow.ingestion.url=${WORKFLOW_INGESTION_SQS_URL}
 aws.sqs.queue.workflow.rule.request.url=${WORKFLOW_RULES_REQUEST_SQS_URL}
 aws.sqs.queue.workflow.rule.response.url=${WORKFLOW_RULES_RESPONSE_SQS_URL}
+aws.sqs.queue.workflow.dataquality.response.url=${WORKFLOW_DATA_QUALTIY_RESPONSE_SQS_URL}
+aws.sqs.queue.workflow.dataquality.request.url=${WORKFLOW_DATA_QUALTIY_REQUEST_SQS_URL}
 aws.dynamodb.table.master.data.header=MasterDataHeaderSIT
 aws.dynamodb.table.master.data.task=MasterDataTaskTrackerSIT
 
