--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -23,6 +23,8 @@ aws.sqs.queue.audit.url=https://sqs.ap-southeast-1.amazonaws.com/audit-sqs
 aws.sqs.queue.workflow.ingestion.url=https://sqs.ap-southeast-1.amazonaws.com/ingestion
 aws.sqs.queue.workflow.rule.request.url=https://sqs.ap-southeast-1.amazonaws.com/rule-request
 aws.sqs.queue.workflow.rule.response.url=https://sqs.ap-southeast-1.amazonaws.com/rule-response
+aws.sqs.queue.workflow.dataquality.response.url=https://sqs.ap-southeast-1.amazonaws.com/dataquality-response
+aws.sqs.queue.workflow.dataquality.request.url=https://sqs.ap-southeast-1.amazonaws.com/dataquality-response
 
 audit.activity.type.prefix=Workflow-
 
