update master data accordng to data remediation response

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -25,6 +25,7 @@ aws.sqs.queue.workflow.rule.request.url=https://sqs.ap-southeast-1.amazonaws.com
 aws.sqs.queue.workflow.rule.response.url=https://sqs.ap-southeast-1.amazonaws.com/rule-response
 aws.sqs.queue.workflow.dataquality.response.url=https://sqs.ap-southeast-1.amazonaws.com/dataquality-response
 aws.sqs.queue.workflow.dataquality.request.url=https://sqs.ap-southeast-1.amazonaws.com/dataquality-response
+aws.sqs.queue.workflow.dataremediation.response.url=https://sqs.ap-southeast-1.amazonaws.com/dataremediation-response
 
 audit.activity.type.prefix=Workflow-
 
