--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=com.amazonaws.secretsmanager.sql.AWSSecretsManagerMySQLDriver
-spring.datasource.url=jdbc-secretsmanager:mysql://edgp-sit.cfqm8kgg2pur.ap-southeast-1.rds.amazonaws.com:3306/masterdata
-spring.datasource.username=rds-credentials-edgp-sit
+spring.datasource.url=jdbc-secretsmanager:mysql://edgp-prd.cfqm8kgg2pur.ap-southeast-1.rds.amazonaws.com:3306/masterdata
+spring.datasource.username=rds-credentials-edgp-prod
 
 spring.config.import=optional:aws-secretsmanager:prod/edgp/secret
 
